--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   dots_indicator: ^3.0.0
   flutter_svg: ^2.0.17
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
