Add password validation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dots_indicator: ^3.0.0
   flutter_svg: ^2.0.17
   url_launcher: ^6.3.1
+  flutter_pw_validator: ^1.6.0
 
 dev_dependencies:
   flutter_test:
