--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.17
   url_launcher: ^6.3.1
   flutter_pw_validator: ^1.6.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
